--- a/src/css/main/landing.module.css
+++ b/src/css/main/landing.module.css
@@ -56,7 +56,7 @@
 
 .scroll {
     text-align: center;
-    color: #424242;
+    color: #a1a0a9;
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
